# geolife2025

./: .gitignore  GLC25_PA_metadata_test.csv  all-baselines-fixed-pa-only.py  all-baselines-fixed-po-then-pa-steps.py  analysis.ipynb  main.py  output-pa-only.txt  output-po-then-pa.txt  pyproject.toml  random.ipynb  results-po-then-pa.csv  submission-all-baselines-pa-only.csv  submission-all-baselines-po-then-pa.csv  submission-random.csv  submission-t25.csv
submission-pa-only/submission/: submission-single-modality-baseline-with-bio-pa-e10-data-pa-only.csv  submission-single-modality-baseline-with-bio-pa-e11-data-pa-only.csv  submission-single-modality-baseline-with-bio-pa-e12-data-pa-only.csv  submission-single-modality-baseline-with-bio-pa-e13-data-pa-only.csv  submission-single-modality-baseline-with-bio-pa-e14-data-pa-only.csv  submission-single-modality-baseline-with-bio-pa-e15-data-pa-only.csv  submission-single-modality-baseline-with-bio-pa-e16-data-pa-only.csv  submission-single-modality-baseline-with-bio-pa-e17-data-pa-only.csv  submission-single-modality-baseline-with-bio-pa-e18-data-pa-only.csv  submission-single-modality-baseline-with-bio-pa-e19-data-pa-only.csv  submission-single-modality-baseline-with-bio-pa-e20-data-pa-only.csv  submission-single-modality-baseline-with-bio-pa-e21-data-pa-only.csv  submission-single-modality-baseline-with-bio-pa-e22-data-pa-only.csv  submission-single-modality-baseline-with-bio-pa-e23-data-pa-only.csv  submission-single-modality-baseline-with-bio-pa-e24-data-pa-only.csv  (+45 more)
(+60 files in other folders)
